exports[`invalid(1): {\"exports\": {\".\": [\"./a.js\", \"./b.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": ["./a.js", "./b.js"]}}

`;

exports[`invalid(1): {\"exports\": {\".\": [\"./a.js\", \"./b.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": ["./a.js", "./b.js"]}}
    |                   ^^^^^^^^^^^^^^^^^^^^ String-target arrays in \`exports\` are not fallback lists in Node.js; a missing first file or package does not make Node.js try the next target.

`;

exports[`invalid(2): {\"imports\": {\"#dep\": [\"./a.js\", \"./b.js\"]}} 1`] = `

[Input]
  1 | {"imports": {"#dep": ["./a.js", "./b.js"]}}

`;

exports[`invalid(2): {\"imports\": {\"#dep\": [\"./a.js\", \"./b.js\"]}} 2`] = `

Message:
> 1 | {"imports": {"#dep": ["./a.js", "./b.js"]}}
    |                      ^^^^^^^^^^^^^^^^^^^^ String-target arrays in \`imports\` are not fallback lists in Node.js; a missing first file or package does not make Node.js try the next target.

`;

exports[`invalid(3): {\"imports\": {\"#dep\": [\"missing-package\", \"./dep.js\"]}} 1`] = `

[Input]
  1 | {"imports": {"#dep": ["missing-package", "./dep.js"]}}

`;

exports[`invalid(3): {\"imports\": {\"#dep\": [\"missing-package\", \"./dep.js\"]}} 2`] = `

Message:
> 1 | {"imports": {"#dep": ["missing-package", "./dep.js"]}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String-target arrays in \`imports\` are not fallback lists in Node.js; a missing first file or package does not make Node.js try the next target.

`;

exports[`invalid(4): {\"exports\": [\"not:valid\", \"./a.js\", \"./b.js\"]} 1`] = `

[Input]
  1 | {"exports": ["not:valid", "./a.js", "./b.js"]}

`;

exports[`invalid(4): {\"exports\": [\"not:valid\", \"./a.js\", \"./b.js\"]} 2`] = `

Message:
> 1 | {"exports": ["not:valid", "./a.js", "./b.js"]}
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String-target arrays in \`exports\` are not fallback lists in Node.js; a missing first file or package does not make Node.js try the next target.

`;

exports[`invalid(5): {\"imports\": {\"#dep\": [\"missing-package\", \"./a.js\", \"./b.js\"]}} 1`] = `

[Input]
  1 | {"imports": {"#dep": ["missing-package", "./a.js", "./b.js"]}}

`;

exports[`invalid(5): {\"imports\": {\"#dep\": [\"missing-package\", \"./a.js\", \"./b.js\"]}} 2`] = `

Message:
> 1 | {"imports": {"#dep": ["missing-package", "./a.js", "./b.js"]}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String-target arrays in \`imports\` are not fallback lists in Node.js; a missing first file or package does not make Node.js try the next target.

`;

exports[`invalid(6): {\"exports\": [\"./a%2Finvalid.js\", \"./fallback.js\"]} 1`] = `

[Input]
  1 | {"exports": ["./a%2Finvalid.js", "./fallback.js"]}

`;

exports[`invalid(6): {\"exports\": [\"./a%2Finvalid.js\", \"./fallback.js\"]} 2`] = `

Message:
> 1 | {"exports": ["./a%2Finvalid.js", "./fallback.js"]}
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String-target arrays in \`exports\` are not fallback lists in Node.js; a missing first file or package does not make Node.js try the next target.

`;

exports[`invalid(7): {\n\t\"exports\": {\n\t\t\".\": {\n\t\t\t\"import\": [\"./import.js\", \"./fallback.js\"]\n\t\t}\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"exports": {
  3 | 		".": {
  4 | 			"import": ["./import.js", "./fallback.js"]
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`invalid(7): {\n\t\"exports\": {\n\t\t\".\": {\n\t\t\t\"import\": [\"./import.js\", \"./fallback.js\"]\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"exports": {
  3 | 		".": {
> 4 | 			"import": ["./import.js", "./fallback.js"]
    | 			          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String-target arrays in \`exports\` are not fallback lists in Node.js; a missing first file or package does not make Node.js try the next target.
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`invalid(8): {\n\t\"exports\": [\n\t\t\"./a.js\",\n\t\t\"./b.js\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"exports": [
  3 | 		"./a.js",
  4 | 		"./b.js"
  5 | 	]
  6 | }

`;

exports[`invalid(8): {\n\t\"exports\": [\n\t\t\"./a.js\",\n\t\t\"./b.js\"\n\t]\n} 2`] = `

Message:
  1 | {
> 2 | 	"exports": [
    | 	           ^
> 3 | 		"./a.js",
    | ^^^^^^^^^^^
> 4 | 		"./b.js"
    | ^^^^^^^^^^
> 5 | 	]
    | ^^ String-target arrays in \`exports\` are not fallback lists in Node.js; a missing first file or package does not make Node.js try the next target.
  6 | }

`;

exports[`invalid(9): {\n\t\"imports\": {\n\t\t\"#dep\": [\n\t\t\t[\"./a.js\", \"./b.js\"]\n\t\t]\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"imports": {
  3 | 		"#dep": [
  4 | 			["./a.js", "./b.js"]
  5 | 		]
  6 | 	}
  7 | }

`;

exports[`invalid(9): {\n\t\"imports\": {\n\t\t\"#dep\": [\n\t\t\t[\"./a.js\", \"./b.js\"]\n\t\t]\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"imports": {
  3 | 		"#dep": [
> 4 | 			["./a.js", "./b.js"]
    | 			^^^^^^^^^^^^^^^^^^^^ String-target arrays in \`imports\` are not fallback lists in Node.js; a missing first file or package does not make Node.js try the next target.
  5 | 		]
  6 | 	}
  7 | }

`;
